# miso-from-html

./: README.md  View.hs  index.html  miso-from-html.cabal
.stack-work/install/x86_64-osx/lts-9.0/8.0.2/flag-cache/: Only-0.1-1dkiXHtbc8zGqo2Q6b73I6  ansi-terminal-0.6.3.1-3RTqikoQf47ajVD9m8zgB  ansi-wl-pprint-0.6.7.3-A79v826bgPr574HtaZPPqC  happy-1.19.5  haskell-lexer-1.0.1-KbrNzOgvOlP3fb0pmnXx0E  miso-from-html-0.1.0.0  mtl-2.2.1-BLKBelFsPB3BoFeSWSOYj6  optparse-applicative-0.13.2.0-EqIYOWOFTvf23sT5QTYn9U  optparse-generic-1.2.2-2kFo9e3feGfSo8u45LVou  pretty-show-1.6.13-LSgpbeg7Zcd2id7s8ra4bM  semigroups-0.18.3-5xL9BgkWQsCGwo6YahyMCM  system-filepath-0.4.13.4-1Onr71muBMoJ4AF6FUpTVo  tagsoup-0.14.1-HO0sHb651BeFnnIxljlexR  text-1.2.2.2-9UQZjEJZQFSGMffj1Z5g00  transformers-compat-0.5.1.4-IuFogs8HAVUJBWVNMhtssu  void-0.7.2-4PWwLjXxAER9U3zGpDhf6e
app/: Main.hs
src/: Main.hs
src/Miso/: FromHTML.hs
