name:                miso-from-html
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/FintanH/miso-from-html#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          fintan.halpenny@gmail.com
copyright:           2017 Fintan Halpenny
category:            Command Line Tool
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:   Miso.FromHTML
  default-language:  Haskell2010
  build-depends:     base >= 4.7 && < 5
                   , hxt
  hs-source-dirs:    src
  if impl(ghc >= 8.0)
    ghc-options: -Wall -Wno-redundant-constraints
  else
    ghc-options: -Wall

executable miso-from-html
  hs-source-dirs:    app
  main-is:           Main.hs
  default-language:  Haskell2010
  build-depends:     base >= 4.7 && < 5
                   , miso-from-html
                   , optparse-generic
  ghc-options: -Wall
